prevent user scaling by double tap on mobile

--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+/* Prevent mobile browsers from bouncing / overscrolling on page */
+html,body {
+    overflow: hidden;
+    overscroll-behavior-y: none;
+}
+
 ul {
     padding-left: 1rem;
 }
